sonarlint Stream.toList()" method should be used instead of "collectors"